Added support for specializing to any type (outside java.base).