@@ -2,7 +2,6 @@
 
 JAVA_HOME=$HOME/git-oracle/graal/sdk/latest_graalvm_home
 
-patched=/tmp/org.graalvm.datastructure.specialization/patched/java.base
+patched=gen/bin/java.base
 
-$JAVA_HOME/bin/javac --patch-module java.base=$patched SpecializedArrayList.java
-$JAVA_HOME/bin/java --patch-module java.base=$patched SpecializedArrayList
+$JAVA_HOME/bin/java --patch-module java.base=$patched -Xbootclasspath/a:bin --add-reads java.base=ALL-UNNAMED -cp bin my.testpackage.PointArrayList
